bobcat (2.08.00) (ISN)

  * Repaired persistent bug in String::unescape; unescape only allows \x, \X
    is no longer accepted (and was not according to the standard)

  * Multi-parameter constructors of Arg::LongOption no longer use default
    arguments to allow the use of initializer lists, added
    Arg::LongOption(char const *name)

  * Added missing #include <cstring> to localsocketbase/localsocketbase.ih

  * Pattern now defines the default end pattern (pattern/pattern0.cc) as 
    "\\b" for the benefit of MAC users who otherwise suffer from the `empty
    sub-expression' error. This affects ConfigFile and (by implication)
    programs like XD. It has no known effect on Debian systems.

bobcat (2.07.02)

  * Repaired a bug in converting escaped hexadecimal characters in
    String::unescape, reported by Richard Berendsen.

  * The FnWrap example is now about FnWrap, not anymore about FnWrap2c

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 24 Feb 2010 08:33:51 +0100

bobcat (2.07.01)

  * Minimized class FnWrap's member access rights. FnWrap's inner organization
    improved. Instead of creating nested FnWrap1 and FnWrap2 objects
    inheritance is used. Also, all function template implementations were
    moved to below the class interface.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 15 Feb 2010 12:42:49 +0100

bobcat (2.07.00)

  * TypeTrait now supports tests for rvalue reference types.
  * FBB::insertable and FBB::throwable are no longer required when using Errno
  * The gptr() < egptr() checks in underflow() functions (IFdStreambuf and
    Randbuffer) are superfluous and have been removed.
  * DateTime's man-page contains a caveat for setMonth.
  * Fswap's man-page BUGS section is augmented with a warning against swapping
    streams.
  * Bobcat's main man-page received an entry referring to the TypeTrait class
    template.
  * Repaired cgi/push.cc and cgi/accept.cc
  * New class: FBB::FnWrap, easier to use than and providing all the features