@@ -1,7 +1,8 @@
 bobcat (2.08.00) (ISN)
 
-  * Repaired persistent bug in String::unescape; unescape only allows \x, \X
-    is no longer accepted (and was not according to the standard)
+  * Repaired additional bugs in String::unescape; unescape only allows \x, \X
+    is no longer accepted (and was not according to the standard), \0 not
+    followed by octal numbers is now recognized as a 0-byte.
 
   * Multi-parameter constructors of Arg::LongOption no longer use default
     arguments to allow the use of initializer lists, added
